# RP6LUtility

./: Makefile  makefile  rp6l.bt  rp6l_inject.1sc  rp6l_unpack.1sc
dev/: 010editor.c  010editor.h  b010_editor.h  makefile  rparse.c  test.c  unpack.c
include/: b010_editor.h
refs/: rp6l_inject.1sc  rp6l_unpack.1sc
src/: b010_editor.c  b010_editor.h  main.c  rp6l_unpack.c  rp6l_unpack.c.ignore  tmp  unpack.c
support/test/unit/: CMakeLists.txt  CMakeLists.txt.in  make.bat
test/unit/: b010_editor.cpp
